fresh install of blender 2.83.0 not able to save user startup file #78037

Closed
opened 2020-06-19 17:12:19 +02:00 by Gary Wang · 10 comments

System Information
Operating system: Windows 10 ver 1909 and 2004, Archlinux with KDE
Graphics card: GeForce GTX 1060

Blender Version
Broken:

   Windows: 2.83.0 211b6c29f771, from both official website download, installer and zip version both tested. Also tested with blender-2.90.0-e079bf6996fc-windows64, still can reproduce the issue.
   Archlinux: 2.83.0 211b6c29f771, package version17:2.83-1 from Archlinux official repo

Worked: (newest version of Blender that worked as expected)

   Windows: 2.82a 375c7dc4caf4.

(all build hash are get from blender --version output).

Short description of error
Fresh install of blender 2.83.0 not able to save user startup file.

Exact steps for others to reproduce the error

  • Make sure your computer never run blender 2.83 before, or by remove all the files under '%APPDATA%\Blender Foundation\Blender\2.83\config' for Windows (or '~/.config/blender/2.83/config/' for linux)
  • Open blender 2.83 by double clicking the blender.exe executable.
  • Just delete the default cube.
  • Click File>Defaults>Startup File, click Save Startup File.
  • Close the program and re-open it.
  • Check the result (the default cube is still there).

I notice that in the user config folder, there are no userpref.blend file get generated, so I checked my old blender user config folder and put the old userpref.blend file into the 2.83 user config folder, then I found that fixed this issue, the Save Startup File menu also works after that.

  • Do the above steps to reproduce the issue first.
  • Copy the working 'userpref.blend' file form my 2.82a folder '%APPDATA%\Blender Foundation\Blender\2.82\config' (or '~/.config/blender/2.82/config/' for linux) to '%APPDATA%\Blender Foundation\Blender\2.83\config' (or '~/.config/blender/2.83/config/').
  • Open blender 2.83, and we can see the default cube is deleted which means it's working.

Also, here is the userpref.blend file I used for the above workaround.

userpref.blend

btw I guess it's the same issue as https://developer.blender.org/T77813 . @mano-wii

**System Information** Operating system: Windows 10 ver 1909 and 2004, Archlinux with KDE Graphics card: GeForce GTX 1060 **Blender Version** Broken: ``` Windows: 2.83.0 211b6c29f771, from both official website download, installer and zip version both tested. Also tested with blender-2.90.0-e079bf6996fc-windows64, still can reproduce the issue. Archlinux: 2.83.0 211b6c29f771, package version17:2.83-1 from Archlinux official repo ``` Worked: (newest version of Blender that worked as expected) ``` Windows: 2.82a 375c7dc4caf4. ``` (all build hash are get from `blender --version` output). **Short description of error** Fresh install of blender 2.83.0 not able to save user startup file. **Exact steps for others to reproduce the error** - Make sure your computer never run blender 2.83 before, or by remove all the files under '%APPDATA%\Blender Foundation\Blender\2.83\config\' for Windows (or '~/.config/blender/2.83/config/' for linux) - Open blender 2.83 by double clicking the blender.exe executable. - Just delete the default cube. - Click File>Defaults>Startup File, click Save Startup File. - Close the program and re-open it. - Check the result (the default cube is still there). I notice that in the user config folder, there are no userpref.blend file get generated, so I checked my old blender user config folder and put the old userpref.blend file into the 2.83 user config folder, then I found that fixed this issue, the Save Startup File menu also works after that. - Do the above steps to reproduce the issue first. - Copy the working 'userpref.blend' file form my 2.82a folder '%APPDATA%\Blender Foundation\Blender\2.82\config\' (or '~/.config/blender/2.82/config/' for linux) to '%APPDATA%\Blender Foundation\Blender\2.83\config\' (or '~/.config/blender/2.83/config/'). - Open blender 2.83, and we can see the default cube is deleted which means it's working. Also, here is the userpref.blend file I used for the above workaround. [userpref.blend](https://archive.blender.org/developer/F8632208/userpref.blend) btw I guess it's the same issue as https://developer.blender.org/T77813 . @mano-wii

Added subscribers: @mano-wii, @blumia

Added subscribers: @mano-wii, @blumia

#77813 was marked as duplicate of this issue

#77813 was marked as duplicate of this issue

Added subscriber: @MalcolmNadeau

Added subscriber: @MalcolmNadeau

I'm sorry just test delete the 2.82a userpref.blend file and try reproduce this issue with 2.82a, I can also reproduce this issue. I guess I used to did some preference tweaks and it got userpref.blend file generated so the Save as Startup File menu is working when I was using it. I didn't have any older version installed so I cannot test if older release works.

I'm sorry just test delete the 2.82a userpref.blend file and try reproduce this issue with 2.82a, I can also reproduce this issue. I guess I used to did some preference tweaks and it got userpref.blend file generated so the Save as Startup File menu is working when I was using it. I didn't have any older version installed so I cannot test if older release works.

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

I can confirm.
The file is even saved:

Writing homefile: 'C:\Users\GERMANO\AppData\Roaming\Blender Foundation\Blender\2.83\config\startup.blend' ok

But apparently it is only read if there is a userpref.blend.

I can confirm. The file is even saved: ``` Writing homefile: 'C:\Users\GERMANO\AppData\Roaming\Blender Foundation\Blender\2.83\config\startup.blend' ok ``` But apparently it is only read if there is a `userpref.blend`.

Just get the code compiled and took a quick look, and found that in wm_files.c it checks if &U.themes is empty to make sure filepath_startup is successful loaded, which caused it fall back to built-in default. In the code above that line, reading filepath_startup by calling BKE_blendfile_read() returns true but seems the themes value is not set. Haven't dive into the codebase too much so still not quite sure about what actual caused this issue. Hope that helps to the devs :)

Just get the code compiled and took a quick look, and found that in [wm_files.c](https://git.blender.org/gitweb/gitweb.cgi/blender.git/blob/8289fc688b3eb5bc5b1f641e4b51d32d9daf8a71:/source/blender/windowmanager/intern/wm_files.c#l936) it checks if `&U.themes` is empty to make sure `filepath_startup` is successful loaded, which caused it fall back to built-in default. In the code above that line, reading `filepath_startup` by calling `BKE_blendfile_read()` returns true but seems the `themes` value is not set. Haven't dive into the codebase too much so still not quite sure about what actual caused this issue. Hope that helps to the devs :)

This issue was referenced by 833f67bf51

This issue was referenced by 833f67bf513221cfde7cb0f13d66a9598a48444d

This issue was referenced by 16989c4d1d

This issue was referenced by 16989c4d1d3283c316bbdb0486f02107647caeeb

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Bastien Montagne self-assigned this 2020-07-13 16:22:37 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
Eevee & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest/Import
Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest: Wayland
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Eevee & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#78037
There is no content yet.