Fix T78037: fresh install of blender 2.83.0 not able to save user startup file.

Simply remove that check ob userdef's themes, we are never read any
userdef from startup file anymore, so this check makes no more sense.

To be backported to 2.83.